--- a/less/home-page.less
+++ b/less/home-page.less
@@ -103,7 +103,7 @@
         }//closes the button
 
         @media @phone {
-          width:98%;
+          width:100%;
           // height: 10vh;
         }
       }//closes the button class
